[tool.poetry]
name = "LRQC"
version = "0.1.0"
description = "FastAPI application for Long Read QC"
authors = ["Adam Blanchet <ab59@sanger.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75"
uvicorn = "^0.17"
ml-warehouse = { git = "https://github.com/wtsi-npg/ml-warehouse-python.git", branch="devel" }
SQLAlchemy = "^1.4.35"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
